--- a/TazGraph/TazGraph.vcxproj.filters
+++ b/TazGraph/TazGraph.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="GLTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
