--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -3,6 +3,18 @@ Pos=60,60
 Size=400,400
 
 [Window][Default UI]
-Pos=60,60
-Size=233,48
+Pos=501,129
+Size=327,290
+
+[Window][Dear ImGui Demo]
+Pos=145,2
+Size=550,680
+
+[Window][My Window]
+Pos=1014,182
+Size=590,335
+
+[Window][Performance]
+Pos=26,53
+Size=810,400
 
