--- a/TazGraphEngine/TazGraphEngine.vcxproj
+++ b/TazGraphEngine/TazGraphEngine.vcxproj
@@ -139,7 +139,7 @@
     <ClCompile Include="AudioEngine\AudioEngine.cpp" />
     <ClCompile Include="Camera2.5D\OrthoCamera.h" />
     <ClCompile Include="DebugRenderer\DebugRenderer.cpp" />
-    <ClCompile Include="ECS\ECS.cpp" />
+    <ClCompile Include="GOS\GOS.cpp" />
     <ClCompile Include="GraphScreen\IGraphScreen.cpp" />
     <ClCompile Include="GraphScreen\IMainGraph.cpp" />
     <ClCompile Include="GraphScreen\ScreenIndices.h" />
@@ -167,24 +167,24 @@
     <ClInclude Include="Camera2.5D\CameraManager.h" />
     <ClInclude Include="Camera2.5D\ICamera.h" />
     <ClInclude Include="DebugRenderer\DebugRenderer.h" />
-    <ClInclude Include="ECS\Animators\Animation.h" />
-    <ClInclude Include="ECS\Animators\AnimatorComponent.h" />
-    <ClInclude Include="ECS\Animators\AnimatorManager.h" />
-    <ClInclude Include="ECS\ButtonComponent.h" />
-    <ClInclude Include="ECS\ColliderComponent.h" />
-    <ClInclude Include="ECS\Components.h" />
-    <ClInclude Include="ECS\ECS.h" />
-    <ClInclude Include="ECS\ECSManager.h" />
-    <ClInclude Include="ECS\Animators\FlashAnimation.h" />
-    <ClInclude Include="ECS\Animators\FlashAnimatorComponent.h" />
-    <ClInclude Include="ECS\GridComponent.h" />
-    <ClInclude Include="ECS\LightComponent.h" />
-    <ClInclude Include="ECS\LightTextureComponent.h" />
-    <ClInclude Include="ECS\Rectangle_w_Color.h" />
-    <ClInclude Include="ECS\RigidBodyComponent.h" />
-    <ClInclude Include="ECS\SpriteComponent.h" />
-    <ClInclude Include="ECS\TileComponent.h" />
-    <ClInclude Include="ECS\TransformComponent.h" />
+    <ClInclude Include="GOS\Animators\Animation.h" />
+    <ClInclude Include="GOS\Animators\AnimatorComponent.h" />
+    <ClInclude Include="GOS\Animators\AnimatorManager.h" />
+    <ClInclude Include="GOS\ButtonComponent.h" />
+    <ClInclude Include="GOS\ColliderComponent.h" />
+    <ClInclude Include="GOS\Components.h" />
+    <ClInclude Include="GOS\GOS.h" />
+    <ClInclude Include="GOS\GOSManager.h" />
+    <ClInclude Include="GOS\Animators\FlashAnimation.h" />
+    <ClInclude Include="GOS\Animators\FlashAnimatorComponent.h" />
+    <ClInclude Include="GOS\GridComponent.h" />
+    <ClInclude Include="GOS\LightComponent.h" />
+    <ClInclude Include="GOS\LightTextureComponent.h" />
+    <ClInclude Include="GOS\Rectangle_w_Color.h" />
+    <ClInclude Include="GOS\RigidBodyComponent.h" />
+    <ClInclude Include="GOS\SpriteComponent.h" />
+    <ClInclude Include="GOS\TileComponent.h" />
+    <ClInclude Include="GOS\TransformComponent.h" />
     <ClInclude Include="GraphScreen\IGraphScreen.h" />
     <ClInclude Include="GraphScreen\IMainGraph.h" />
     <ClInclude Include="GraphScreen\ScreenList.h" />
