--- a/TazGraphEngine/TazGraphEngine.vcxproj.filters
+++ b/TazGraphEngine/TazGraphEngine.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClCompile Include="SpriteBatch\SpriteBatch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ECS\ECS.cpp">
+    <ClCompile Include="GOS\GOS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PNG_Letters.cpp">
@@ -131,49 +131,49 @@
     <ClInclude Include="Camera2.5D\PerspectiveCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\ColliderComponent.h">
+    <ClInclude Include="GOS\ColliderComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Rectangle_w_Color.h">
+    <ClInclude Include="GOS\Rectangle_w_Color.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\ECS.h">
+    <ClInclude Include="GOS\GOS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\TransformComponent.h">
+    <ClInclude Include="GOS\TransformComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\SpriteComponent.h">
+    <ClInclude Include="GOS\SpriteComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\RigidBodyComponent.h">
+    <ClInclude Include="GOS\RigidBodyComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\LightComponent.h">
+    <ClInclude Include="GOS\LightComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\GridComponent.h">
+    <ClInclude Include="GOS\GridComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Animators\FlashAnimatorComponent.h">
+    <ClInclude Include="GOS\Animators\FlashAnimatorComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Animators\FlashAnimation.h">
+    <ClInclude Include="GOS\Animators\FlashAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\ButtonComponent.h">
+    <ClInclude Include="GOS\ButtonComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Animators\AnimatorManager.h">
+    <ClInclude Include="GOS\Animators\AnimatorManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Animators\AnimatorComponent.h">
+    <ClInclude Include="GOS\Animators\AnimatorComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Animators\Animation.h">
+    <ClInclude Include="GOS\Animators\Animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\Components.h">
+    <ClInclude Include="GOS\Components.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera2.5D\CameraManager.h">
@@ -185,7 +185,7 @@
     <ClInclude Include="PNG_Letters.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\LightTextureComponent.h">
+    <ClInclude Include="GOS\LightTextureComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SceneManager\SceneManager.h">
@@ -194,7 +194,7 @@
     <ClInclude Include="Grid\Grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\ECSManager.h">
+    <ClInclude Include="GOS\GOSManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DebugRenderer\DebugRenderer.h">
@@ -203,7 +203,7 @@
     <ClInclude Include="ResourceManager\ResourceManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ECS\TileComponent.h">
+    <ClInclude Include="GOS\TileComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
