--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -7,6 +7,10 @@ Pos=781,140
 Size=233,48
 
 [Window][Background UI]
-Pos=1524,178
+Pos=1472,123
 Size=355,643
+
+[Window][Performance]
+Pos=2,612
+Size=491,356
 
