--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -11,6 +11,14 @@ Pos=1472,123
 Size=355,643
 
 [Window][Performance]
-Pos=2,612
+Pos=5,597
 Size=491,356
+
+[Window][Control Window]
+Pos=860,408
+Size=200,200
+
+[Window][File Actions]
+Pos=3,7
+Size=278,100
 
