--- a/TazGraph/TazGraph.vcxproj
+++ b/TazGraph/TazGraph.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Src\App\App.cpp" />
     <ClCompile Include="Src\AssetManager\AssetManager.cpp" />
     <ClCompile Include="Src\Collision\Collision.cpp" />
+    <ClCompile Include="Src\EditorIMGUI\EditorIMGUI.cpp" />
     <ClCompile Include="Src\Graph.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\MainMenuScreen\MainMenuScreen.cpp" />
@@ -158,8 +159,8 @@
     <ClInclude Include="Src\App\App.h" />
     <ClInclude Include="Src\AssetManager\AssetManager.h" />
     <ClInclude Include="Src\Collision\Collision.h" />
+    <ClInclude Include="Src\EditorIMGUI\EditorIMGUI.h" />
     <ClInclude Include="Src\GOS\Scripts\MainMenuBackground.h" />
-    <ClInclude Include="Src\GOS\Scripts\ScoreComponent.h" />
     <ClInclude Include="Src\GOS\ScriptComponents.h" />
     <ClInclude Include="Src\Graph.h" />
     <ClInclude Include="Src\MainMenuScreen\MainMenuScreen.h" />
