--- a/TazGraph/imgui.ini
+++ b/TazGraph/imgui.ini
@@ -7,22 +7,30 @@ Pos=781,140
 Size=233,48
 
 [Window][Background UI]
-Pos=1472,123
-Size=355,643
+Pos=-2,98
+Size=355,477
 
 [Window][Performance]
-Pos=5,597
-Size=491,356
+Pos=-7,575
+Size=360,433
 
 [Window][Control Window]
 Pos=860,408
 Size=200,200
 
 [Window][File Actions]
-Pos=3,7
-Size=278,100
+Pos=0,-1
+Size=352,100
 
 [Window][File Input Window]
-Pos=645,231
-Size=420,208
+Pos=723,403
+Size=466,103
+
+[Window][Saving...]
+Pos=760,458
+Size=400,100
+
+[Window][Loading...]
+Pos=760,458
+Size=400,100
 
